<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <Button
        android:text="@string/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:id="@+id/btn_login"
        android:background="@drawable/button_background" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/et_full_name"
        android:hint="@string/et_full_name"
        android:textColorHint="@color/et_hint"
        android:background="@drawable/edittext_background"
        android:padding="15dp"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/et_email"
        android:layout_alignLeft="@+id/et_email"
        android:layout_alignStart="@+id/et_email"
        android:textColor="@android:color/white"
        android:focusable="false" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/et_email"
        android:hint="@string/et_email"
        android:textColorHint="@color/et_hint"
        android:padding="15dp"
        android:layout_marginBottom="78dp"
        android:background="@drawable/edittext_background"
        android:layout_alignBottom="@+id/et_password"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:textColor="@android:color/white"
        android:focusable="false" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/et_password"
        android:hint="@string/et_password"
        android:textColorHint="@color/et_hint"
        android:padding="15dp"
        android:background="@drawable/edittext_background"
        android:textColor="@android:color/white"
        android:focusable="false" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:id="@+id/et_phone"
        android:layout_below="@+id/et_email"
        android:layout_alignRight="@+id/et_password"
        android:layout_alignEnd="@+id/et_password"
        android:layout_width="240dp"
        android:background="@drawable/edittext_background"
        android:padding="15dp"
        android:hint="@string/et_phone"
        android:textColorHint="@color/et_hint"
        android:textColor="@android:color/white"
        android:focusable="false" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_alignTop="@+id/et_phone"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:id="@+id/et_country_code"
        android:background="@drawable/edittext_background"
        android:padding="15dp"
        android:hint="@string/et_country_code"
        android:textColorHint="@color/et_hint"
        android:textColor="@android:color/white"
        android:focusable="false" />

</RelativeLayout>