<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.ProfileFragment"
    android:background="@color/colorPrimaryDark">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/layout_toolbar">

        <TextView
            android:text="@string/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/tv_profile"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/back"
            android:id="@+id/ib_back"
            android:background="@drawable/button_toolbar_background"
            android:padding="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            app:srcCompat="@drawable/page_1"
            android:id="@+id/imageButton3"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_toolbar_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/layout_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/layout_name"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/settings_profile"
                android:id="@+id/ib_profile_picture"
                android:layout_weight="1"
                android:background="@drawable/button_circular_settings_background" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/ib_profile_picture">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_name"
                        android:textColor="@android:color/white"
                        android:textSize="22sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:text="@string/tv_xp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_xp"
                        android:textColor="@color/tv_today" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:text="@string/tv_level"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_level"
                        android:textColor="@color/tv_today"
                        android:layout_width="wrap_content" />

                </TableRow>

            </TableLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
